--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ code {
 
 .ant-layout-header {
   background-color: #fff !important;
+  box-shadow: 0px 2px 5px #27272780;
 }
 
 .ant-layout-header .ant-menu {
